# 25_4_2_Computer_simulator

./: CMakeLists.txt  input.cpp  operation.cpp  operation.h
include/: input.h
src/: CMakeLists.txt  input.cpp  main.cpp  operations.cpp
